# GMFeather

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/app/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/app/src/commands/: mod.rs
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: main.rs
src-tauri/cli/src/commands/: clean.rs  mod.rs  optimize.rs  rollback.rs
src-tauri/cli/src/ui/: progress.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: lib.rs
src-tauri/core/src/common/: config.rs  formatter.rs  greet.rs  mod.rs
src-tauri/core/src/domain/: mod.rs
src-tauri/core/src/modules/asset/domain/: asset_detector.rs  asset_file.rs  backup_service.rs  image_compressor.rs  image_validator.rs  mod.rs  optimization_options.rs
src-tauri/core/src/modules/asset/domain/errors/: mod.rs  optimization_error.rs
src-tauri/core/src/modules/asset/domain/models/: asset_file.rs  asset_type.rs  mod.rs  optimization_result.rs
src-tauri/core/src/modules/asset/domain/ports/: asset_detector.rs  backup_service.rs  image_compressor.rs  image_validator.rs  mod.rs
src-tauri/core/src/modules/asset/infrastructure/: default_image_validator.rs  file_asset_detector.rs  file_backup_service.rs  jpeg_compressor.rs  mod.rs  oxipng_compressor.rs
src-tauri/core/src/modules/asset/use_cases/: clean_backups.rs  mod.rs  optimize_image.rs  rollback_asset.rs
src-tauri/core/src/use_cases/: mod.rs
