[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
feather_core = { path = "../core" }
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true
