[package]
name = "gmfeather"
version = "0.1.0"
edition = "2021"

[dependencies]
feather_core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
